<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/nativeChooseNetworks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="nativeChooseNetworks"
        android:text="@string/chooseNetworks" />

    <include layout="@layout/native_switch" />

    <Button
        android:id="@+id/initNativeSdkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="initNativeSdkButton"
        android:text="@string/initNativeSdkButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/isNativeLoadedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="isNativeLoadedButton"
            android:text="@string/isNativeLoadedButton" />

        <com.appodeal.test.layout.HorizontalNumberPicker
            android:id="@+id/nativeAdsCountPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/nativeCacheButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nativeCacheButton"
            android:text="@string/nativeCacheButton" />

        <Button
            android:id="@+id/nativeHideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nativeHideButton"
            android:text="@string/nativeHideButton" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nativeContainer"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nativeLoadContainerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nativeLoadContainerButton"
            android:text="@string/nativeLoadContainerButton" />

        <com.appodeal.test.layout.HorizontalNumberPicker
            android:id="@+id/nativeAdsContainerShowPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/nativeShowContainerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nativeShowContainerButton"
            android:text="@string/nativeShowContainerButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/templateNativeTextView" />

        <Spinner
            android:id="@+id/native_template_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/typeNativeTextView" />

        <Spinner
            android:id="@+id/native_type_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nativeAdsListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
</LinearLayout>
